ChangeLog for TDB
=================

==== 0.8.10

+ tdbloader now generates statistics when loading an empty database.
 
+ TDB no longer registers a shutdown handler to sync datasets.
  It has been discovered that it's possible to interrupt a write process,
  cause the shutdown handler to run and so break the database.  

+ Improved concurrency violation checking.

+ Print file names during loading multiple files in tdbloader2.

+ Increase heap size for data phase in tdbloader2.

==== 0.8.9

+ Bug fix for tdbloader2.

==== 0.8.8

+ Upgrade to latest Jena and ARQ jars
+ New bulk loader (not Windows) "tdbloader2"
    Usage: tdbloader2 --loc DIR file1 file2 ...
    Works on Unix-like systems.   
+ Incremental improvements to the pure Java bulk loader 

==== 0.8.7

+ Maintenace release

==== 0.8.6

+ No longer output an optimizer warning when loading data with tdbloader.
+ New command "riot" that parsers any format and outputs N-Triples/N-Quads
  Language determination based on filename extension. 
  Use command with specific fomat name to force the format
+ Improve performance when loading quads (N-Quads, TriG)
+ Loader output now to a logger (name in constant TDB.loadLoggerName)
+ Parser output now to a logger (name in constant RIOT.riotLoggerName)
+ Warnings and errors from TDB command line tools now go to stderr so not mixed with parser triples/quads output.
+ Bug fix: reconstructing XSD DateTime involving fractional seconds could omit leading 0s in fractional part.   

==== 0.8.5

+ Partial support for TriG and NQuads input (no loading messages, not fully optimized)
  tdbloader loads Trig and NQuads
  tdbdump output NQuads (N-Triples, if only the default graph contains any triples)
  Stil to be done: TriG output. 

+ Dynamic datasets : use the dataset description in a query (FROM/FROM NAMED) to 
  restrict the behaviour of the query execution to just those graphs.
  
    Default graph can be the set union of several graphs (use multiple FROM)