@@ -66,7 +66,7 @@ function process_rows
 	fi
 
     log "Index $IDX"
-    sort $KEYS < "$DATA" > $WORK
+    sort -u $KEYS < "$DATA" > $WORK
     log "Build $IDX"
     rm -f "$LOC/$IDX.dat"
     rm -f "$LOC/$IDX.idn"
